# stockquote

./: README.md  pyproject.toml  stockquote.py
